[package]
name = "wavfft"
version = "0.1.0"
authors = ["belohnung <projektarbeityt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
clap = "2.33.0"
rustfft = "3.0.0"
nannou = "0.12.0"
nannou_audio = "0.2.0"
crossbeam-channel = "0.4.0"